--- a/customer_menu-main.html
+++ b/customer_menu-main.html
@@ -80,7 +80,7 @@
             </div>
             <div class="item-info">
               <div class="item-price">$190</div>
-              <a href="" class="item-button fa fa-shopping-cart"></a>
+              <a href="" class="item-button">Add</a>
             </div>
         </div>
 
@@ -95,7 +95,7 @@
             </div>
             <div class="item-info">
               <div class="item-price">$120</div>
-              <a href="" class="item-button fa fa-shopping-cart"></a>
+              <a href="" class="item-button">Add</a>
             </div>
         </div>
 
@@ -110,7 +110,7 @@
             </div>
             <div class="item-info">
               <div class="item-price">$100</div>
-              <a href="" class="item-button fa fa-shopping-cart"></a>
+              <a href="" class="item-button">Add</a>
             </div>
         </div>
     </div>
@@ -127,7 +127,7 @@
             </div>
             <div class="item-info">
               <div class="item-price">$110</div>
-              <a href="" class="item-button fa fa-shopping-cart"></a>
+              <a href="" class="item-button">Add</a>
             </div>
         </div>
 
@@ -142,7 +142,7 @@
             </div>
             <div class="item-info">
               <div class="item-price">$230</div>
-              <a href="" class="item-button fa fa-shopping-cart"></a>
+              <a href="" class="item-button">Add</a>
             </div>
         </div>
 
@@ -157,7 +157,7 @@
             </div>
             <div class="item-info">
               <div class="item-price">$140</div>
-              <a href="" class="item-button fa fa-shopping-cart"></a>
+              <a href="" class="item-button">Add</a>
             </div>
         </div>
     </div>
