--- a/customer_cart.html
+++ b/customer_cart.html
@@ -284,7 +284,7 @@
           align-items: center;
           float: right;
           background-color: transparent;
-          border: 4px solid black;
+          border: 2.5px solid black;
           border-radius: 100px;
           box-sizing: border-box;
           color: #ffffff;
@@ -342,6 +342,7 @@
           color: #43484D;
           font-weight: 300;
           border-radius: 3px;
+          font-weight: bold;
         }
         
         button[class*=btn] {
