updated feedback form

--- a/customer_feedback.html
+++ b/customer_feedback.html
@@ -14,6 +14,7 @@
 		body {
 			font-family: Verdana;
 			text-align: center;
+			background-color: rgb(242, 206, 140);
 		}
 
 		form {
@@ -172,56 +173,20 @@
 			<label for="recommed-1">
 				<input type="radio"
 					id="recommed-1"
-					name="recommed">Yes</input>
+					name="recommed-1">Yes</input>
 			</label>
 			<label for="recommed-2">
 				<input type="radio"
 					id="recommed-2"
-					name="recommed">No</input>
+					name="recommed-1">No</input>
 			</label>
 			<label for="recommed-3">
 				<input type="radio"
 					id="recommed-3"
-					name="recommed">Maybe</input>
+					name="recommed-1">Maybe</input>
 			</label>
 		</div>
 
-		<div class="form-control">
-			<label>Options
-				<small>(Check all that apply)</small>
-			</label>
-
-			<label for="inp-1">
-				<input type="checkbox"
-					name="inp">1</input></label>
-			<label for="inp-2">
-				<input type="checkbox"
-					name="inp">2</input></label>
-			<label for="inp-3">
-				<input type="checkbox"
-					name="inp">3</input></label>
-			<label for="inp-4">
-				<input type="checkbox"
-					name="inp">4</input></label>
-			<label for="inp-5">
-				<input type="checkbox"
-					name="inp">5</input></label>
-			<label for="inp-6">
-				<input type="checkbox"
-					name="inp">6</input></label>
-			<label for="inp-7">
-				<input type="checkbox"
-					name="inp">7</input></label>
-			<label for="inp-7">
-				<input type="checkbox"
-					name="inp">8</input></label>
-			<label for="inp-7">
-				<input type="checkbox"
-					name="inp">9</input></label>
-			<label for="inp-7">
-				<input type="checkbox"
-					name="inp">10</input></label>
-		</div>
 
 		<div class="form-control">
 			<label for="comment">
