--- a/customer_feedback.html
+++ b/customer_feedback.html
@@ -12,9 +12,10 @@
 
 	<style>
 		body {
-			font-family: Verdana;
+			font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 			text-align: center;
 			background-color: rgb(242, 206, 140);
+			font-size: 1rem;
 		}
 
 		form {
@@ -32,19 +33,26 @@
 
 
 		.form-control label {
-			display: block;
+			display: inline-block;
 			margin-bottom: 10px;
 		}
 
-		.form-control input,
-		.form-control select,
-		.form-control textarea {
+		.form-control input,.form-control textarea {
 			border: 1px solid #777;
-			border-radius: 2px;
+			border-radius: 3px;
 			font-family: inherit;
 			padding: 10px;
 			display: block;
 			width: 95%;
+		}
+
+		.form-control select{
+			border: 1px solid #777;
+			border-radius: 3px;
+			font-family: inherit;
+			padding: 10px;
+			display: block;
+			width: 100%;
 		}
 
 		.form-control input[type="radio"],
@@ -60,9 +68,150 @@
 			font-size: 21px;
 			display: block;
 			width: 100%;
-			margin-top: 50px;
-			margin-bottom: 20px;
+			margin-top: 40px;
+			margin-bottom: 10px;
+			padding: 5px;
 		}
+
+		.recommend-1{
+			display: inline-block;
+			width: auto;
+		}
+
+		@import url('https://fonts.googleapis.com/css?family=Roboto');
+
+		.card {
+			display: -webkit-box;
+			display: -ms-flexbox;
+			display: flex;
+		}
+
+		.rating-container {
+			display: block;
+			justify-content: left;
+			width: 80%;
+		}
+
+
+		.rating {
+			display: flex;
+			justify-content:space-between;
+			vertical-align: middle;
+			background-color: white;
+		}
+
+		svg {
+			fill: black;
+			height: 2.5rem;
+			width: 2.5rem;
+		}
+
+		#radios label {
+			position: relative;
+		}
+
+		input[type="radio"] {
+			position: absolute;
+			opacity: 0;
+		}
+
+		input[type="radio"] + svg {
+			-webkit-transition: all 0.2s;
+			transition: all 0.2s;
+		}
+
+		input[class="super-happy-1"]:hover + svg,
+		input[class="super-happy-1"]:checked + svg,
+		input[class="super-happy-1"]:focus + svg {
+			fill: rgb(0, 109, 217);
+		}
+
+		input[class="happy-1"]:hover + svg,
+		input[class="happy-1"]:checked + svg,
+		input[class="happy-1"]:focus + svg {
+			fill: rgb(0, 204, 79);
+		}
+
+		input[class="neutral-1"]:hover + svg,
+		input[class="neutral-1"]:checked + svg,
+		input[class="neutral-1"]:focus + svg {
+			fill: rgb(232, 214, 0);
+		}
+
+		input[class="sad-1"]:hover + svg,
+		input[class="sad-1"]:checked + svg,
+		input[class="sad-1"]:focus + svg {
+			fill: rgb(229, 132, 0);
+		}
+
+		input[class="super-sad-1"]:hover + svg,
+		input[class="super-sad-1"]:checked + svg,
+		input[class="super-sad-1"]:focus + svg {
+			fill: rgb(239, 42, 16);
+		}		
+
+/* ----------------------------------------------------- */
+				
+		input[class="super-happy-2"]:hover + svg,
+		input[class="super-happy-2"]:checked + svg,
+		input[class="super-happy-2"]:focus + svg {
+			fill: rgb(0, 109, 217);
+		}
+
+		input[class="happy-2"]:hover + svg,
+		input[class="happy-2"]:checked + svg,
+		input[class="happy-2"]:focus + svg {
+			fill: rgb(0, 204, 79);
+		}
+
+		input[class="neutral-2"]:hover + svg,
+		input[class="neutral-2"]:checked + svg,
+		input[class="neutral-2"]:focus + svg {
+			fill: rgb(232, 214, 0);
+		}
+
+		input[class="sad-2"]:hover + svg,
+		input[class="sad-2"]:checked + svg,
+		input[class="sad-2"]:focus + svg {
+			fill: rgb(229, 132, 0);
+		}
+
+		input[class="super-sad-2"]:hover + svg,
+		input[class="super-sad-2"]:checked + svg,
+		input[class="super-sad-2"]:focus + svg {
+			fill: rgb(239, 42, 16);
+		}		
+/* ----------------------------------------------------- */
+		input[class="super-happy-3"]:hover + svg,
+		input[class="super-happy-3"]:checked + svg,
+		input[class="super-happy-3"]:focus + svg {
+			fill: rgb(0, 109, 217);
+		}
+
+		input[class="happy-3"]:hover + svg,
+		input[class="happy-3"]:checked + svg,
+		input[class="happy-3"]:focus + svg {
+			fill: rgb(0, 204, 79);
+		}
+
+		input[class="neutral-3"]:hover + svg,
+		input[class="neutral-3"]:checked + svg,
+		input[class="neutral-3"]:focus + svg {
+			fill: rgb(232, 214, 0);
+		}
+
+		input[class="sad-3"]:hover + svg,
+		input[class="sad-3"]:checked + svg,
+		input[class="sad-3"]:focus + svg {
+			fill: rgb(229, 132, 0);
+		}
+
+		input[class="super-sad-3"]:hover + svg,
+		input[class="super-sad-3"]:checked + svg,
+		input[class="super-sad-3"]:focus + svg {
+			fill: rgb(239, 42, 16);
+		}		
+
 	</style>
 </head>
 
@@ -133,60 +282,119 @@
 		</div>
 
         <div class="form-control">
-			<label>
-				How would you rate our services?
-			</label>
+			<div class="card">
+				<div class="rating-container">
+					<div class="rating-text">
+					<label>How would you rate our services?</label>
+					</div>
+					<div class="rating">
 
-			<label for="recommed-1">
-				<input type="radio"
-					id="recommed-1"
-					name="recommed">1</input>
-			</label>
-			<label for="recommed-2">
-				<input type="radio"
-					id="recommed-2"
-					name="recommed">2</input>
-			</label>
-			<label for="recommed-3">
-				<input type="radio"
-					id="recommed-3"
-					name="recommed">3</input>
-			</label>
-            <label for="recommed-4">
-				<input type="radio"
-					id="recommed-4"
-					name="recommed">4</input>
-			</label>
-            <label for="recommed-5">
-				<input type="radio"
-					id="recommed-5"
-					name="recommed">5</input>
-			</label>
+							<label for="super-happy-1">
+								<input type="radio" name="service-rating" class="super-happy-1" id="super-happy-1" value="5" />
+								<svg viewBox="0 0 24 24"><path d="M12,17.5C14.33,17.5 16.3,16.04 17.11,14H6.89C7.69,16.04 9.67,17.5 12,17.5M8.5,11A1.5,1.5 0 0,0 10,9.5A1.5,1.5 0 0,0 8.5,8A1.5,1.5 0 0,0 7,9.5A1.5,1.5 0 0,0 8.5,11M15.5,11A1.5,1.5 0 0,0 17,9.5A1.5,1.5 0 0,0 15.5,8A1.5,1.5 0 0,0 14,9.5A1.5,1.5 0 0,0 15.5,11M12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4A8,8 0 0,1 20,12A8,8 0 0,1 12,20M12,2C6.47,2 2,6.5 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z" /></svg>
+								</label>
+
+							<label for="happy-1">
+								<input type="radio" name="service-rating" class="happy-1" id="happy-1" value="4" />
+								<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" width="100%" height="100%" viewBox="0 0 24 24"><path d="M20,12A8,8 0 0,0 12,4A8,8 0 0,0 4,12A8,8 0 0,0 12,20A8,8 0 0,0 20,12M22,12A10,10 0 0,1 12,22A10,10 0 0,1 2,12A10,10 0 0,1 12,2A10,10 0 0,1 22,12M10,9.5C10,10.3 9.3,11 8.5,11C7.7,11 7,10.3 7,9.5C7,8.7 7.7,8 8.5,8C9.3,8 10,8.7 10,9.5M17,9.5C17,10.3 16.3,11 15.5,11C14.7,11 14,10.3 14,9.5C14,8.7 14.7,8 15.5,8C16.3,8 17,8.7 17,9.5M12,17.23C10.25,17.23 8.71,16.5 7.81,15.42L9.23,14C9.68,14.72 10.75,15.23 12,15.23C13.25,15.23 14.32,14.72 14.77,14L16.19,15.42C15.29,16.5 13.75,17.23 12,17.23Z" /></svg>
+								</label>
+
+							<label for="neutral-1">
+								<input type="radio" name="service-rating" class="neutral-1" id="neutral-1" value="3" />
+								<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" width="100%" height="100%" viewBox="0 0 24 24"><path d="M8.5,11A1.5,1.5 0 0,1 7,9.5A1.5,1.5 0 0,1 8.5,8A1.5,1.5 0 0,1 10,9.5A1.5,1.5 0 0,1 8.5,11M15.5,11A1.5,1.5 0 0,1 14,9.5A1.5,1.5 0 0,1 15.5,8A1.5,1.5 0 0,1 17,9.5A1.5,1.5 0 0,1 15.5,11M12,20A8,8 0 0,0 20,12A8,8 0 0,0 12,4A8,8 0 0,0 4,12A8,8 0 0,0 12,20M12,2A10,10 0 0,1 22,12A10,10 0 0,1 12,22C6.47,22 2,17.5 2,12A10,10 0 0,1 12,2M9,14H15A1,1 0 0,1 16,15A1,1 0 0,1 15,16H9A1,1 0 0,1 8,15A1,1 0 0,1 9,14Z" /></svg>
+								</label>
+
+							<label for="sad-1">
+								<input type="radio" name="service-rating" class="sad-1" id="sad-1" value="2" />
+								<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" width="100%" height="100%" viewBox="0 0 24 24"><path d="M20,12A8,8 0 0,0 12,4A8,8 0 0,0 4,12A8,8 0 0,0 12,20A8,8 0 0,0 20,12M22,12A10,10 0 0,1 12,22A10,10 0 0,1 2,12A10,10 0 0,1 12,2A10,10 0 0,1 22,12M15.5,8C16.3,8 17,8.7 17,9.5C17,10.3 16.3,11 15.5,11C14.7,11 14,10.3 14,9.5C14,8.7 14.7,8 15.5,8M10,9.5C10,10.3 9.3,11 8.5,11C7.7,11 7,10.3 7,9.5C7,8.7 7.7,8 8.5,8C9.3,8 10,8.7 10,9.5M12,14C13.75,14 15.29,14.72 16.19,15.81L14.77,17.23C14.32,16.5 13.25,16 12,16C10.75,16 9.68,16.5 9.23,17.23L7.81,15.81C8.71,14.72 10.25,14 12,14Z" /></svg>
+								</label>
+
+							<label for="super-sad-1">
+								<input type="radio" name="service-rating" class="super-sad-1" id="super-sad-1" value="1" />
+								<svg viewBox="0 0 24 24"><path d="M12,2C6.47,2 2,6.47 2,12C2,17.53 6.47,22 12,22A10,10 0 0,0 22,12C22,6.47 17.5,2 12,2M12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4A8,8 0 0,1 20,12A8,8 0 0,1 12,20M16.18,7.76L15.12,8.82L14.06,7.76L13,8.82L14.06,9.88L13,10.94L14.06,12L15.12,10.94L16.18,12L17.24,10.94L16.18,9.88L17.24,8.82L16.18,7.76M7.82,12L8.88,10.94L9.94,12L11,10.94L9.94,9.88L11,8.82L9.94,7.76L8.88,8.82L7.82,7.76L6.76,8.82L7.82,9.88L6.76,10.94L7.82,12M12,14C9.67,14 7.69,15.46 6.89,17.5H17.11C16.31,15.46 14.33,14 12,14Z" /></svg>
+								</label>
+					</div>
+				</div>
+			</div>
+
 		</div>
 
 		<div class="form-control">
-			<label>
-				Would you recommend our restaurant
-				to a friend?
-			</label>
+			<div class="card">
+				<div class="rating-container">
+					<div class="rating-text">
+					<label>How would you rate our food?</label>
+					</div>
+					<div class="rating">
 
-			<label for="recommed-1">
-				<input type="radio"
-					id="recommed-1"
-					name="recommed-1">Yes</input>
-			</label>
-			<label for="recommed-2">
-				<input type="radio"
-					id="recommed-2"
-					name="recommed-1">No</input>
-			</label>
-			<label for="recommed-3">
-				<input type="radio"
-					id="recommed-3"
-					name="recommed-1">Maybe</input>
-			</label>
+						<label for="super-happy-2">
+							<input type="radio" name="food-rating" class="super-happy-2" id="super-happy-2" value="5" />
+							<svg viewBox="0 0 24 24"><path d="M12,17.5C14.33,17.5 16.3,16.04 17.11,14H6.89C7.69,16.04 9.67,17.5 12,17.5M8.5,11A1.5,1.5 0 0,0 10,9.5A1.5,1.5 0 0,0 8.5,8A1.5,1.5 0 0,0 7,9.5A1.5,1.5 0 0,0 8.5,11M15.5,11A1.5,1.5 0 0,0 17,9.5A1.5,1.5 0 0,0 15.5,8A1.5,1.5 0 0,0 14,9.5A1.5,1.5 0 0,0 15.5,11M12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4A8,8 0 0,1 20,12A8,8 0 0,1 12,20M12,2C6.47,2 2,6.5 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z" /></svg>
+							</label>
+
+						<label for="happy-2">
+							<input type="radio" name="food-rating" class="happy-2" id="happy-2" value="4" />
+							<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" width="100%" height="100%" viewBox="0 0 24 24"><path d="M20,12A8,8 0 0,0 12,4A8,8 0 0,0 4,12A8,8 0 0,0 12,20A8,8 0 0,0 20,12M22,12A10,10 0 0,1 12,22A10,10 0 0,1 2,12A10,10 0 0,1 12,2A10,10 0 0,1 22,12M10,9.5C10,10.3 9.3,11 8.5,11C7.7,11 7,10.3 7,9.5C7,8.7 7.7,8 8.5,8C9.3,8 10,8.7 10,9.5M17,9.5C17,10.3 16.3,11 15.5,11C14.7,11 14,10.3 14,9.5C14,8.7 14.7,8 15.5,8C16.3,8 17,8.7 17,9.5M12,17.23C10.25,17.23 8.71,16.5 7.81,15.42L9.23,14C9.68,14.72 10.75,15.23 12,15.23C13.25,15.23 14.32,14.72 14.77,14L16.19,15.42C15.29,16.5 13.75,17.23 12,17.23Z" /></svg>
+							</label>
+
+						<label for="neutral-2">
+							<input type="radio" name="food-rating" class="neutral-2" id="neutral-2" value="3" />
+							<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" width="100%" height="100%" viewBox="0 0 24 24"><path d="M8.5,11A1.5,1.5 0 0,1 7,9.5A1.5,1.5 0 0,1 8.5,8A1.5,1.5 0 0,1 10,9.5A1.5,1.5 0 0,1 8.5,11M15.5,11A1.5,1.5 0 0,1 14,9.5A1.5,1.5 0 0,1 15.5,8A1.5,1.5 0 0,1 17,9.5A1.5,1.5 0 0,1 15.5,11M12,20A8,8 0 0,0 20,12A8,8 0 0,0 12,4A8,8 0 0,0 4,12A8,8 0 0,0 12,20M12,2A10,10 0 0,1 22,12A10,10 0 0,1 12,22C6.47,22 2,17.5 2,12A10,10 0 0,1 12,2M9,14H15A1,1 0 0,1 16,15A1,1 0 0,1 15,16H9A1,1 0 0,1 8,15A1,1 0 0,1 9,14Z" /></svg>
+							</label>
+
+						<label for="sad-2">
+							<input type="radio" name="food-rating" class="sad-2" id="sad-2" value="2" />
+							<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" width="100%" height="100%" viewBox="0 0 24 24"><path d="M20,12A8,8 0 0,0 12,4A8,8 0 0,0 4,12A8,8 0 0,0 12,20A8,8 0 0,0 20,12M22,12A10,10 0 0,1 12,22A10,10 0 0,1 2,12A10,10 0 0,1 12,2A10,10 0 0,1 22,12M15.5,8C16.3,8 17,8.7 17,9.5C17,10.3 16.3,11 15.5,11C14.7,11 14,10.3 14,9.5C14,8.7 14.7,8 15.5,8M10,9.5C10,10.3 9.3,11 8.5,11C7.7,11 7,10.3 7,9.5C7,8.7 7.7,8 8.5,8C9.3,8 10,8.7 10,9.5M12,14C13.75,14 15.29,14.72 16.19,15.81L14.77,17.23C14.32,16.5 13.25,16 12,16C10.75,16 9.68,16.5 9.23,17.23L7.81,15.81C8.71,14.72 10.25,14 12,14Z" /></svg>
+							</label>
+
+						<label for="super-sad-2">
+							<input type="radio" name="food-rating" class="super-sad-2" id="super-sad-2" value="1" />
+							<svg viewBox="0 0 24 24"><path d="M12,2C6.47,2 2,6.47 2,12C2,17.53 6.47,22 12,22A10,10 0 0,0 22,12C22,6.47 17.5,2 12,2M12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4A8,8 0 0,1 20,12A8,8 0 0,1 12,20M16.18,7.76L15.12,8.82L14.06,7.76L13,8.82L14.06,9.88L13,10.94L14.06,12L15.12,10.94L16.18,12L17.24,10.94L16.18,9.88L17.24,8.82L16.18,7.76M7.82,12L8.88,10.94L9.94,12L11,10.94L9.94,9.88L11,8.82L9.94,7.76L8.88,8.82L7.82,7.76L6.76,8.82L7.82,9.88L6.76,10.94L7.82,12M12,14C9.67,14 7.69,15.46 6.89,17.5H17.11C16.31,15.46 14.33,14 12,14Z" /></svg>
+							</label>
+					</div>
+				</div>
+			</div>
+
 		</div>
 
+
+		<div class="form-control">
+			<div class="card">
+				<div class="rating-container">
+					<div class="rating-text">
+					<label>How would you rate our ambiance?</label>
+					</div>
+					<div class="rating">
+
+						<label for="super-happy-3">
+							<input type="radio" name="ambiance-rating" class="super-happy-3" id="super-happy-3" value="5" />
+							<svg viewBox="0 0 24 24"><path d="M12,17.5C14.33,17.5 16.3,16.04 17.11,14H6.89C7.69,16.04 9.67,17.5 12,17.5M8.5,11A1.5,1.5 0 0,0 10,9.5A1.5,1.5 0 0,0 8.5,8A1.5,1.5 0 0,0 7,9.5A1.5,1.5 0 0,0 8.5,11M15.5,11A1.5,1.5 0 0,0 17,9.5A1.5,1.5 0 0,0 15.5,8A1.5,1.5 0 0,0 14,9.5A1.5,1.5 0 0,0 15.5,11M12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4A8,8 0 0,1 20,12A8,8 0 0,1 12,20M12,2C6.47,2 2,6.5 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z" /></svg>
+							</label>
+
+						<label for="happy-3">
+							<input type="radio" name="ambiance-rating" class="happy-3" id="happy-3" value="4" />
+							<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" width="100%" height="100%" viewBox="0 0 24 24"><path d="M20,12A8,8 0 0,0 12,4A8,8 0 0,0 4,12A8,8 0 0,0 12,20A8,8 0 0,0 20,12M22,12A10,10 0 0,1 12,22A10,10 0 0,1 2,12A10,10 0 0,1 12,2A10,10 0 0,1 22,12M10,9.5C10,10.3 9.3,11 8.5,11C7.7,11 7,10.3 7,9.5C7,8.7 7.7,8 8.5,8C9.3,8 10,8.7 10,9.5M17,9.5C17,10.3 16.3,11 15.5,11C14.7,11 14,10.3 14,9.5C14,8.7 14.7,8 15.5,8C16.3,8 17,8.7 17,9.5M12,17.23C10.25,17.23 8.71,16.5 7.81,15.42L9.23,14C9.68,14.72 10.75,15.23 12,15.23C13.25,15.23 14.32,14.72 14.77,14L16.19,15.42C15.29,16.5 13.75,17.23 12,17.23Z" /></svg>
+							</label>
+
+						<label for="neutral-3">
+							<input type="radio" name="ambiance-rating" class="neutral-3" id="neutral-3" value="3" />
+							<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" width="100%" height="100%" viewBox="0 0 24 24"><path d="M8.5,11A1.5,1.5 0 0,1 7,9.5A1.5,1.5 0 0,1 8.5,8A1.5,1.5 0 0,1 10,9.5A1.5,1.5 0 0,1 8.5,11M15.5,11A1.5,1.5 0 0,1 14,9.5A1.5,1.5 0 0,1 15.5,8A1.5,1.5 0 0,1 17,9.5A1.5,1.5 0 0,1 15.5,11M12,20A8,8 0 0,0 20,12A8,8 0 0,0 12,4A8,8 0 0,0 4,12A8,8 0 0,0 12,20M12,2A10,10 0 0,1 22,12A10,10 0 0,1 12,22C6.47,22 2,17.5 2,12A10,10 0 0,1 12,2M9,14H15A1,1 0 0,1 16,15A1,1 0 0,1 15,16H9A1,1 0 0,1 8,15A1,1 0 0,1 9,14Z" /></svg>
+							</label>
+
+						<label for="sad-3">
+							<input type="radio" name="ambiance-rating" class="sad-3" id="sad-3" value="3" />
+							<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" width="100%" height="100%" viewBox="0 0 24 24"><path d="M20,12A8,8 0 0,0 12,4A8,8 0 0,0 4,12A8,8 0 0,0 12,20A8,8 0 0,0 20,12M22,12A10,10 0 0,1 12,22A10,10 0 0,1 2,12A10,10 0 0,1 12,2A10,10 0 0,1 22,12M15.5,8C16.3,8 17,8.7 17,9.5C17,10.3 16.3,11 15.5,11C14.7,11 14,10.3 14,9.5C14,8.7 14.7,8 15.5,8M10,9.5C10,10.3 9.3,11 8.5,11C7.7,11 7,10.3 7,9.5C7,8.7 7.7,8 8.5,8C9.3,8 10,8.7 10,9.5M12,14C13.75,14 15.29,14.72 16.19,15.81L14.77,17.23C14.32,16.5 13.25,16 12,16C10.75,16 9.68,16.5 9.23,17.23L7.81,15.81C8.71,14.72 10.25,14 12,14Z" /></svg>
+							</label>
+
+						<label for="super-sad-3">
+							<input type="radio" name="ambiance-rating" class="super-sad-3" id="super-sad-3" value="1" />
+							<svg viewBox="0 0 24 24"><path d="M12,2C6.47,2 2,6.47 2,12C2,17.53 6.47,22 12,22A10,10 0 0,0 22,12C22,6.47 17.5,2 12,2M12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4A8,8 0 0,1 20,12A8,8 0 0,1 12,20M16.18,7.76L15.12,8.82L14.06,7.76L13,8.82L14.06,9.88L13,10.94L14.06,12L15.12,10.94L16.18,12L17.24,10.94L16.18,9.88L17.24,8.82L16.18,7.76M7.82,12L8.88,10.94L9.94,12L11,10.94L9.94,9.88L11,8.82L9.94,7.76L8.88,8.82L7.82,7.76L6.76,8.82L7.82,9.88L6.76,10.94L7.82,12M12,14C9.67,14 7.69,15.46 6.89,17.5H17.11C16.31,15.46 14.33,14 12,14Z" /></svg>
+							</label>
+					</div>
+				</div>
+			</div>
+
+		</div>
 
 		<div class="form-control">
 			<label for="comment">
@@ -194,7 +402,7 @@
 			</label>
 
 			<textarea name="comment" id="comment"
-				placeholder="Enter your comment here">
+				placeholder="Enter your comment here" rows="5">
 			</textarea>
 		</div>
 
