made admin menu, order, home pages

--- a/admin_orders.html
+++ b/admin_orders.html
@@ -184,25 +184,25 @@ table tr:nth-child(2n+1) {
             <span></span>
             <span></span>
           
-            <a href="customer.html" class="menu-logo">
+            <a href="admin.html" class="menu-logo">
               <img src="images/image-removebg-preview.png" alt="My Awesome Website"/>
             </a>
           
             <div class="menu">
               <ul>
                 <li>
-                  <a href="customer.html">
+                  <a href="admin.html">
                     Home
                   </a>
                 </li>
                 <li>
-                  <a href="customer_cuisine.html">
+                  <a href="admin_menu.html">
                     Menu
                   </a>
                 </li>
                 <li>
-                  <a href="">
-                    Cart
+                  <a href="admin_orders.html">
+                    Orders
                   </a>
                 </li>
               </ul>
