--- a/customer_cuisine.html
+++ b/customer_cuisine.html
@@ -29,6 +29,14 @@
         width: 100vw;
         max-height: 33vh;
         max-width: 100vw;
+        filter: blur(2px);
+        filter:opacity(0.7);
+        }
+
+        .image1:hover, .image2:hover, .image3:hover{
+            filter: blur(0px);
+            filter:opacity(1);
+            transition: 0.7s;
         }
 
     </style>
