updated navbar and cusine page

--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
              <span></span>
            
              <a href="#" class="menu-logo">
-               <img src="image-removebg-preview.png" alt="My Awesome Website"/>
+               <img src="images/image-removebg-preview.png" alt="My Awesome Website"/>
              </a>
            
              <div class="menu">
@@ -40,7 +40,13 @@
                      Cart
                    </a>
                  </li>
+                 <li>
+                  <a href="customer_order_history.html">
+                    Orders
+                  </a>
+                </li>
                </ul>
+  
                <ul>
                  <li>
                    <a href="index.html">
