--- a/customer.html
+++ b/customer.html
@@ -52,6 +52,11 @@
                     Cart
                   </a>
                 </li>
+                <li>
+                  <a href="customer_order_history.html">
+                    Orders
+                  </a>
+                </li>
               </ul>
               <ul>
                 <li>
