--- a/customer_order_history.html
+++ b/customer_order_history.html
@@ -194,17 +194,22 @@ table tr:nth-child(2n+1) {
             <div class="menu">
               <ul>
                 <li>
-                  <a href="admin.html">
+                  <a href="customer.html">
                     Home
                   </a>
                 </li>
                 <li>
-                  <a href="admin_menu.html">
+                  <a href="customer_cuisine.html">
                     Menu
                   </a>
                 </li>
                 <li>
-                  <a href="admin_orders.html">
+                  <a href="customer_cart.html">
+                    Cart
+                  </a>
+                </li>
+                <li>
+                  <a href="customer_order_history.html">
                     Orders
                   </a>
                 </li>
