--- a/customer_cart.html
+++ b/customer_cart.html
@@ -463,6 +463,11 @@
                     Cart
                   </a>
                 </li>
+                <li>
+                  <a href="customer_order_history.html">
+                    Orders
+                  </a>
+                </li>
               </ul>
               <ul>
                 <li>
