--- a/customer_cuisine.html
+++ b/customer_cuisine.html
@@ -30,12 +30,16 @@
         max-height: 33vh;
         max-width: 100vw;
         filter: blur(2px);
-        filter:opacity(0.7);
+        filter:opacity(0.5);
         }
 
         .image1:hover, .image2:hover, .image3:hover{
             filter: blur(0px);
             filter:opacity(1);
+            transition: 0.7s;
+        }
+
+        .image1:not(:hover), .image2:not(:hover), .image3:not(:hover){
             transition: 0.7s;
         }
 
