--- a/customer_menu-appetizers.html
+++ b/customer_menu-appetizers.html
@@ -38,6 +38,11 @@
                     Cart
                   </a>
                 </li>
+                <li>
+                  <a href="customer_order_history.html">
+                    Orders
+                  </a>
+                </li>
               </ul>
               <ul>
                 <li>
