--- a/customer_order_history.html
+++ b/customer_order_history.html
@@ -15,12 +15,13 @@ body * {
 }
 
 .header {
-  background-color: #327a81;
+  background-color:  #A13333;
   color: white;
   font-size: 1.5em;
   padding: 1rem;
   text-align: center;
   text-transform: uppercase;
+  font-weight: bold;
 }
 
 
@@ -47,21 +48,21 @@ table td {
 }
 
 table th {
-  background-color: #daeff1;
+  background-color: #F7CCAC;
   font-weight: bold;
 }
 table tr:nth-child(2n) {
   background-color: white;
 }
 table tr:nth-child(2n+1) {
-  background-color: #edf7f8;
+  background-color: #F6E7D8;
 }
 
 .button-33 {
-  background-color: #c2fbd7;
+  background-color: #80efa8;
   border-radius: 100px;
   box-shadow: rgba(44, 187, 99, .2) 0 -25px 18px -14px inset,rgba(44, 187, 99, .15) 0 1px 2px,rgba(44, 187, 99, .15) 0 2px 4px,rgba(44, 187, 99, .15) 0 4px 8px,rgba(44, 187, 99, .15) 0 8px 16px,rgba(44, 187, 99, .15) 0 16px 32px;
-  color: green;
+  color: rgb(0, 0, 0);
   cursor: pointer;
   display: inline-block;
   font-family: CerebriSans-Regular,-apple-system,system-ui,Roboto,sans-serif;
@@ -237,7 +238,7 @@ table tr:nth-child(2n+1) {
           <th width="230">Food Items</th>
           <th>Admin</th>
           <th>Status</th>
-          <th>Reorder</th>
+          <th> </th>
        </tr>
  
        <tr>
