add redirecting thankyou page.

--- a/contact.html
+++ b/contact.html
@@ -60,7 +60,7 @@
 
 
         <h1>Contact Us</h1>
-      <form name="myForm" action="" onsubmit="return validateForm()" method="post">
+      <form name="myForm" action="thankyou.html" onsubmit="return validateForm()" method="post">
          <table class="form-style">
             <tr>
                <td>
