added redirecting pages.

--- a/customer_feedback.html
+++ b/customer_feedback.html
@@ -21,7 +21,7 @@
 
 <body>
 	
-	<form name="myForm" action="" onsubmit="return validateForm()" method="post" id="form">
+	<form name="myForm" action="thankyou2.html" onsubmit="return validateForm()" method="post" id="form">
 		<h1>Feedback Form</h1>
 		<div class="form-control">
 			<label form="name" id="label-name">
