--- a/thankyou2.html
+++ b/thankyou2.html
@@ -21,13 +21,13 @@
     <title>Thank You Page</title>
   </head>
   <body>
-    <h1 align="center">Thank You for your feedback</h1>
+    <h1 align="center">Thank you for your feedback.</h1>
     <p>Web page redirects in <span id="timer_text">3</span> seconds.</p>
   </body>
   <script>
     setTimeout(function(){
        window.location.href = 'customer.html';
-    }, 4000);
+    }, 3800);
 
     var text = ["2", "1", "0"];
     var counter = 0;
