--- a/customer_food_status.html
+++ b/customer_food_status.html
@@ -16,7 +16,7 @@
  body {  
   font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;  
   font-weight: 400;  
-  background-color: #CFDBEA;  
+  background-color: rgb(242, 206, 140);  
  }  
 
  table{
@@ -40,8 +40,12 @@
   transition: all 0.2s;  
 }
 
- .green{
-    background-color: rgb(136, 200, 42);
+.green{
+    background-color: rgb(42, 228, 64);
+ }
+
+ .blue{
+    background-color: rgb(42, 228, 213);
  }
 
  .table-container{
@@ -53,7 +57,7 @@
 
  th{
     font-size: 40px;
-    padding-bottom: 15px;
+    padding-bottom: 0px;
     padding-left: 10px;
  }
 
@@ -61,6 +65,11 @@
     font-size: 20px;
     padding: 26px 20px;
     text-align: right;
+ }
+ .order_id{
+  margin-top: -20px;
+  font-size: 15px;
+  font-weight: 600;
  }
     </style>
 
@@ -116,12 +125,15 @@
                     <th colspan="2">Order Status</th>
                 </tr>
                 <tr>
+                  <td class="order_id" colspan="2">Order ID - #5234827364876</th>
+              </tr>
+                <tr>
                     <td>Pending</td>
-                    <td><div class="status-circle green"></div> </td>
+                    <td><div class="status-circle blue"></div> </td>
                 </tr>
                 <tr>
                     <td>Accepted</td>
-                    <td><div class="status-circle"></div> </td>
+                    <td><div class="status-circle green"></div> </td>
                 </tr>
                 <tr>
                     <td>Prepared</td>
@@ -184,4 +196,17 @@
                 </footer>
           
     </body>
+
+    <script>
+      function change(i) {  
+      var doc = document.getElementsByClassName("status-circle");  
+      var color =[ "blue", "green"];  
+      for(i=0; i<color.length; i++){  
+            doc.style.backgroundColor = color[i];  
+            alert("my color is "+ color[i]);  
+            if (i>=color.length){i=0;}  
+        }
+    }  
+    setInterval(function changebackground(){change(0)},1000);
+    </script>
 </html>
